--- a/Ubah_Web/index.html
+++ b/Ubah_Web/index.html
@@ -6,31 +6,29 @@
     <title>Lifestyle Theme</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Lifestyle Vibes</a>
-          <!-- Toggler for mobile view -->
+          <a class="navbar-brand" href="../Ubah_Web/index.html">Lifestyle Vibes</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- Collapsible menu -->
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="home.html">Home</a>
+                      <a class="nav-link" href="../Ubah_Web/components/home.html">Home</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="about.html">About</a>
+                      <a class="nav-link" href="../Ubah_Web/components/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
+                      <a class="nav-link" href="../Ubah_Web/components/contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="subscribe.html">Subscribe</a>
+                      <a class="nav-link" href="../Ubah_Web/components/subscribe.html">Subscribe</a>
                   </li>
               </ul>
           </div>
