--- a/Ubah_Web/index.html
+++ b/Ubah_Web/index.html
@@ -46,7 +46,7 @@
           </p>
       </div>
         <div class="btn-group">
-            <a href="home.html" class="btn">Lets Start The Journey</a>
+            <a href="../Ubah_Web/components/home.html" class="btn">Lets Start The Journey</a>
         </div>
     </section>
   </body>
